fix(sidebar): add collapse button logics

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -43,7 +43,7 @@
             justify-content: flex-start;
             align-items: stretch;
             flex-direction: column;
-            gap: 3rem;
+            gap: 1.5rem;
 
             &__brand {
                 margin-left: 0.5rem;
@@ -66,6 +66,26 @@
                 flex-direction: column;
                 gap: 0.25rem;
                 // padding-bottom: 1.5rem;
+            }
+        }
+
+        &__primary
+        {
+            &__collapse
+            {
+                background: $color-gray-700 !important;
+                border: none !important;
+                margin-left: 0.25rem;
+
+                &:hover
+                {
+                    background: $color-gray-600 !important;
+                }
+
+                &:focus
+                {
+                    box-shadow: none !important;
+                }
             }
         }
 
