--- a/src/components/SidebarButton/SidebarButton.scss
+++ b/src/components/SidebarButton/SidebarButton.scss
@@ -14,7 +14,7 @@
     gap: 0.5rem;
     padding: 8px 12px;
     border-radius: 6px;
-    background-color: $color-gray-700;
+    background: $color-gray-700;
     border: none;
     cursor: pointer;
     text-decoration: none;
